# pokemon-battle-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: linters.yml  tests.yml
battle_sim/: utils.py
battle_sim/database/: sample_moves.py
battle_sim/maths/: rng.py  stats.py
battle_sim/mechanics/: events.py
battle_sim/models/: actions.py  moves.py  pokemon.py  stats.py  type_matchups.py
tests/: conftest.py  test_events.py  test_moves.py  test_natures.py  test_stats.py  test_types.py
