[project]
name = "pokemon-battle-simulator"
version = "0.1.0"
description = "Engine for orchestrating 6v6 Pokemon battles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "hypothesis>=6.140.2",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "vulture>=2.14",
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "F",    # pyflakes
    "I",    # isort
    "F401", # remove unused imports
]

[tool.mypy]
python_version = "3.12"
disable_error_code = 'import-untyped'
